<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">


    <TextView
        android:layout_marginTop="100dp"
        android:id="@+id/txtTelaResp"
        android:text="@string/telaResp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:textSize="25dp"/>

    //nome

    <TextView
        android:layout_marginTop="25dp"
        android:id="@+id/txtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:text="@string/txtNome"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:textSize="25dp"/>

    //endereço

    <TextView
        android:id="@+id/txtEndereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:text="@string/txtEndereco"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/edtEndereco"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:textSize="25dp"/>

    //cep

    <TextView
        android:id="@+id/txtCep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:text="@string/txtCEP"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/edtCep"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:textSize="25dp"/>


    //bairro

    <TextView
        android:id="@+id/txtBairro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:text="@string/txtBairro"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/edtBairro"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:textSize="25dp"/>

    <Button
        android:id="@+id/btnConfirmar"
        android:text="@string/confirmar"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>




</LinearLayout>